<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <!-- NOTE: Hide buttons to simplify the UI. Users can touch outside the dialog to
         dismiss it. -->
    <!-- NOTE: ListPreference's summary should be set to its value by the activity code. -->
    <!--<ListPreference
        android:defaultValue="180"
        android:entries="@array/pref_sync_frequency_titles"
        android:entryValues="@array/pref_sync_frequency_values"
        android:key="sync_frequency"
        android:negativeButtonText="@null"
        android:positiveButtonText="@null"
        android:title="@string/pref_title_sync_frequency" />-->

    <!-- This preference simply launches an intent when selected. Use this UI sparingly, per
         design guidelines. -->
    <!--<Preference android:title="@string/pref_title_system_sync_settings">
        <intent android:action="android.settings.SYNC_SETTINGS" />
    </Preference>-->

    <!-- NOTE: EditTextPreference accepts EditText attributes. -->
    <!-- NOTE: EditTextPreference's summary should be set to its value by the activity code. -->
    <EditTextPreference
        android:defaultValue="@string/pref_import_export_dropbox_sync_dir_default_in_settings_ui"
        android:inputType="textNoSuggestions"
        android:key="@string/pref_name_import_export_dropbox_sync_dir"
        android:maxLines="1"
        android:selectAllOnFocus="false"
        android:singleLine="true"
        android:summary="@string/pref_description_import_export_dropbox_sync_dir"
        android:title="@string/pref_title_import_export_dropbox_sync_dir" />

    <Preference
        android:key="@string/pref_key_import_export_dropbox_sync_dir_picker"
        android:summary="@string/pref_description_import_export_dropbox_sync_dir_picker"
        android:title="@string/pref_title_import_export_dropbox_sync_dir_picker" />

</PreferenceScreen>
